APF-1296: Synched up stylesheets and fixed spacing in footer.

--- a/web/common/src/main/webapp/styles/style.css
+++ b/web/common/src/main/webapp/styles/style.css
@@ -188,6 +188,7 @@ span.pagelinks {
 #footer a {
     color: #808080;
     text-decoration: none;
+    margin-left: 5px;
 }
 
 #footer a:hover {
